--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@phosphor-icons/react": "^2.1.7",
     "autoprefixer": "^10.4.20",
     "dayjs": "^1.11.13",
+    "firebase": "^10.14.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
