--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "autoprefixer": "^10.4.20",
     "dayjs": "^1.11.13",
     "firebase": "^10.14.0",
+    "leaflet": "^1.9.4",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
     "recoil": "^0.7.7",
