--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-leaflet": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
+    "react-virtuoso": "^4.12.0",
+    "react-window": "^1.8.10",
     "recoil": "^0.7.7",
     "swiper": "^11.1.14"
   },
